--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #005290;
 	}
+    .uiContainerManager.siteforcePanelsContainer {
+        display: block;
+        }
 </style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
