--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #005290;
 	}
+    .uiContainerManager {
+        display: block;
+    }
+    .siteforPanelsContainer {
+        display: block;
+    }
 </style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
