--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/design-system/2.16.2/styles/salesforce-lightning-design-system.min.css" integrity="sha512-4zTIO7L0OiCfwrJ0qx1l7FJzVFtJIXCtBjtxzh1cPEaocVlntVXooqrXCf6jk7yENLcymWklHY/tIikmDCF64A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/design-system/2.16.2/styles/salesforce-lightning-design-system.min.css" integrity="sha512-4zTIO7L0OiCfwrJ0qx1l7FJzVFtJIXCtBjtxzh1cPEaocVlntVXooqrXCf6jk7yENLcymWklHY/tIikmDCF64A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="DESKTOP comm-panels-container uiContainerManager siteforcePanelsContainer" data-aura-rendered-by="54:0" data-aura-class="uiContainerManager siteforcePanelsContainer"></div>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
@@ -71,13 +71,13 @@
 	} else {
 		initESW('https://service.force.com');
 	}
-</script>-->
-	<a id="liveagent_button_online_5735g000000TpTn" href="javascript://Chat" style="display: none;"
+</script>
+<!--	<a id="liveagent_button_online_5735g000000TpTn" href="javascript://Chat" style="display: none;"
 		onclick="liveagent.startChat('5735g000000TpTn')">
-		<!-- Online Chat Content -->Online
+		Online
 	</a>
 	<div id="liveagent_button_offline_5735g000000TpTn" style="display: none;">
-		<!-- Offline Chat Content -->Offline
+		Offline
 	</div>
 	<script type="text/javascript">
 		if (!window._laq) { window._laq = []; }
@@ -89,7 +89,7 @@
 		src='https://c.la2-c1-ukb.salesforceliveagent.com/content/g/js/52.0/deployment.js'></script>
 	<script type='text/javascript'>
 		liveagent.init('https://d.la2-c1-ukb.salesforceliveagent.com/chat', '5725g000000Tl4H', '00D5g00000Bk6SK');
-	</script>
+	</script>-->
 </body>
 
 </html>
