--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 				'https://testchatpersistence-developer-edition.ap24.force.com/site1',
 				gslbBaseURL,
 				'00D5g00000Bk6SK',
-				'Chat_Case',
+				'ChatPersistenceEmbeddedDeployment',
 				{
 					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
 					deploymentId: '5725g000000Tl4H',
-					buttonId: '5735g000000Tq6F',
+					buttonId: '5735g000000Tnd1',
 					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFsYEAW_17c566f31d5',
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LF3nEAG_17ba7925560',
 					isOfflineSupportEnabled: false
 				}
 			);
