--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 				'https://testchatpersistence-developer-edition.ap24.force.com/site1',
 				gslbBaseURL,
 				'00D5g00000Bk6SK',
-				'ChatPersistenceEmbeddedDeployment',
+				'Chat_Case',
 				{
 					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
 					deploymentId: '5725g000000Tl4H',
-					buttonId: '5735g000000Tnd1',
+					buttonId: '5735g000000Tq6F',
 					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LF3nEAG_17ba7925560',
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFsYEAW_17c566f31d5',
 					isOfflineSupportEnabled: false
 				}
 			);
@@ -104,24 +104,6 @@
 			initESW('https://service.force.com');
 		}
 	</script>
-	<!--	<a id="liveagent_button_online_5735g000000TpTn" href="javascript://Chat" style="display: none;"
-		onclick="liveagent.startChat('5735g000000TpTn')">
-		Online
-	</a>
-	<div id="liveagent_button_offline_5735g000000TpTn" style="display: none;">
-		Offline
-	</div>
-	<script type="text/javascript">
-		if (!window._laq) { window._laq = []; }
-		window._laq.push(function () {
-			liveagent.showWhenOnline('5735g000000TpTn', document.getElementById('liveagent_button_online_5735g000000TpTn'));
-			liveagent.showWhenOffline('5735g000000TpTn', document.getElementById('liveagent_button_offline_5735g000000TpTn'));
-		});</script>
-	<script type='text/javascript'
-		src='https://c.la2-c1-ukb.salesforceliveagent.com/content/g/js/52.0/deployment.js'></script>
-	<script type='text/javascript'>
-		liveagent.init('https://d.la2-c1-ukb.salesforceliveagent.com/chat', '5725g000000Tl4H', '00D5g00000Bk6SK');
-	</script>-->
 </body>
 
 </html>
