--- a/index.html
+++ b/index.html
@@ -47,35 +47,49 @@
 			background-color: #005290;
 			font-family: "Arial", sans-serif;
 		}
+
 		.embeddedServiceHelpButton .helpButton .uiButton:focus {
 			outline: 1px solid #005290;
 		}
 	</style>
-	
+
+	<style type='text/css'>
+		.embeddedServiceHelpButton .helpButton .uiButton {
+			background-color: #005290;
+			font-family: "Arial", sans-serif;
+		}
+
+		.embeddedServiceHelpButton .helpButton .uiButton:focus {
+			outline: 1px solid #005290;
+		}
+	</style>
+
 	<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 	<script type='text/javascript'>
-		var initESW = function(gslbBaseURL) {
+		var initESW = function (gslbBaseURL) {
+
+
 			embedded_svc.settings.displayHelpButton = true; //Or false
 			embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-	
+
 			//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 			//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-	
+
 			//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
 			//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-	
+
 			// Settings for Chat
 			//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-				// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-				// Returns a valid button ID.
+			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+			// Returns a valid button ID.
 			//};
 			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-			//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+			embedded_svc.settings.fallbackRouting = ['0055g00000BuOdT', '0055g00000BuPNH'];
 			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-	
+
 			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 			embedded_svc.settings.entryFeature = 'LiveAgent';
-	
+
 			embedded_svc.init(
 				'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com',
 				'https://testchatpersistence-developer-edition.ap24.force.com/site1',
@@ -92,11 +106,11 @@
 				}
 			);
 		};
-	
+
 		if (!window.embedded_svc) {
 			var s = document.createElement('script');
 			s.setAttribute('src', 'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-			s.onload = function() {
+			s.onload = function () {
 				initESW(null);
 			};
 			document.body.appendChild(s);
