--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			// Returns a valid button ID.
 			//};
 			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-			embedded_svc.settings.fallbackRouting = ['0055g00000BuOdT', '0055g00000BuPNH'];
+			embedded_svc.settings.fallbackRouting = ['0055g00000BuPNH'];
 			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 
 			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
