--- a/index.html
+++ b/index.html
@@ -42,16 +42,7 @@
 
 	</form>
 
-	<style type='text/css'>
-		.embeddedServiceHelpButton .helpButton .uiButton {
-			background-color: #005290;
-			font-family: "Arial", sans-serif;
-		}
 
-		.embeddedServiceHelpButton .helpButton .uiButton:focus {
-			outline: 1px solid #005290;
-		}
-	</style>
 
 	<style type='text/css'>
 		.embeddedServiceHelpButton .helpButton .uiButton {
@@ -67,8 +58,6 @@
 	<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 	<script type='text/javascript'>
 		var initESW = function (gslbBaseURL) {
-
-
 			embedded_svc.settings.displayHelpButton = true; //Or false
 			embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
@@ -84,11 +73,11 @@
 			// Returns a valid button ID.
 			//};
 			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-			console.log('inside init');
-			embedded_svc.settings.fallbackRouting = ['0055g00000BuOdT','0055g00000BuPNH'];
-			console.log('after fallback routing');
+			//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-
+			console.log('inside init');
+			embedded_svc.settings.fallbackRouting = ['0055g00000BuOdT', '0055g00000BuPNH'];
+			console.log('after fallback routing');
 			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 			embedded_svc.settings.entryFeature = 'LiveAgent';
 
@@ -97,13 +86,13 @@
 				'https://testchatpersistence-developer-edition.ap24.force.com/site1',
 				gslbBaseURL,
 				'00D5g00000Bk6SK',
-				'Chat_Case',
+				'uploadImageInEinsteinBot',
 				{
 					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
 					deploymentId: '5725g000000Tl4H',
-					buttonId: '5735g000000Tq6F',
+					buttonId: '5735g000000TpTn',
 					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFsYEAW_17c566f31d5',
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFR3EAO_17c3681fdb7',
 					isOfflineSupportEnabled: false
 				}
 			);
