--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 			console.log('inside init');
-			embedded_svc.settings.fallbackRouting = ['0055g00000BuOdT', '0055g00000BuPNH'];
+			embedded_svc.settings.fallbackRouting = ['0055g00000BuPNH', '0055g00000BuOdT'];
 			console.log('after fallback routing');
 			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 			embedded_svc.settings.entryFeature = 'LiveAgent';
