--- a/index.html
+++ b/index.html
@@ -7,44 +7,8 @@
 </head>
 
 <body>
-	<!--  NOTE: Please add the following <META> element to your page <HEAD>.      -->
-	<!--  If necessary, please modify the charset parameter to specify the        -->
-	<!--  character set of your HTML page.                                        -->
 
-
-	<!--  NOTE: Please add the following <FORM> element to your page.             -->
-
-	<form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
-
-		<input type=hidden name="orgid" value="00D5g00000Bk6SK">
-		<input type=hidden name="retURL" value="https://himaja-chanumolu@github.io">
-
-		<!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
-		<!--  these lines if you wish to test in debug mode.                          -->
-		<!--  <input type="hidden" name="debug" value=1>                              -->
-		<!--  <input type="hidden" name="debugEmail"                                  -->
-		<!--  value="hchanumolu@salesforce.com">                                      -->
-
-		<label for="name">Contact Name</label><input id="name" maxlength="80" name="name" size="20" type="text" /><br>
-
-		<label for="email">Email</label><input id="email" maxlength="80" name="email" size="20" type="text" /><br>
-
-		<label for="phone">Phone</label><input id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
-
-		<label for="subject">Subject</label><input id="subject" maxlength="80" name="subject" size="20"
-			type="text" /><br>
-
-		<label for="description">Description</label><textarea name="description"></textarea><br>
-
-		<input type="hidden" id="external" name="external" value="1" /><br>
-
-		<input type="submit" name="submit">
-
-	</form>
-
-
-
-	<style type='text/css'>
+	<!--<style type='text/css'>
 		.embeddedServiceHelpButton .helpButton .uiButton {
 			background-color: #005290;
 			font-family: "Arial", sans-serif;
@@ -102,6 +66,69 @@
 			var s = document.createElement('script');
 			s.setAttribute('src', 'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 			s.onload = function () {
+				initESW(null);
+			};
+			document.body.appendChild(s);
+		} else {
+			initESW('https://service.force.com');
+		}
+	</script>-->
+
+	<style type='text/css'>
+		.embeddedServiceHelpButton .helpButton .uiButton {
+			background-color: #005290;
+			font-family: "Arial", sans-serif;
+		}
+		.embeddedServiceHelpButton .helpButton .uiButton:focus {
+			outline: 1px solid #005290;
+		}
+	</style>
+	
+	<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+	<script type='text/javascript'>
+		var initESW = function(gslbBaseURL) {
+			embedded_svc.settings.displayHelpButton = true; //Or false
+			embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+	
+			//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+			//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+	
+			//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+			//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+	
+			// Settings for Chat
+			//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+				// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+				// Returns a valid button ID.
+			//};
+			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+			//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+	
+			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+			embedded_svc.settings.entryFeature = 'LiveAgent';
+	
+			embedded_svc.init(
+				'https://hchanumolu-20210401-demo.my.salesforce.com',
+				'https://sdodemo-main-166ce2cf6b6-172-1788d46f85c.force.com',
+				gslbBaseURL,
+				'00D5g000004hplA',
+				'fallBackRouting',
+				{
+					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
+					deploymentId: '5725g000000wvPz',
+					buttonId: '5735g000000xDdE',
+					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000x1JYEAY_17cc5d4b503',
+					isOfflineSupportEnabled: false
+				}
+			);
+		};
+	
+		if (!window.embedded_svc) {
+			var s = document.createElement('script');
+			s.setAttribute('src', 'https://hchanumolu-20210401-demo.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+			s.onload = function() {
 				initESW(null);
 			};
 			document.body.appendChild(s);
