--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				// Returns a valid button ID.
 			//};
 			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-			embedded_svc.settings.fallbackRouting = ['0055g000007LgnZ','0055g000007Lgna','0055g00000743XW']; // Brenda, Linda, Himaja An array of button IDs, user IDs, or userId_buttonId
+			//embedded_svc.settings.fallbackRouting = ['0055g000007LgnZ','0055g000007Lgna','0055g00000743XW']; // Brenda, Linda, Himaja An array of button IDs, user IDs, or userId_buttonId
 			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 	
 			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
