--- a/index.html
+++ b/index.html
@@ -102,24 +102,24 @@
 				// Returns a valid button ID.
 			//};
 			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-			//embedded_svc.settings.fallbackRouting = ['0055g000007LgnZ','0055g000007Lgna','0055g00000743XW']; // Brenda, Linda, Himaja An array of button IDs, user IDs, or userId_buttonId
+			//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 	
 			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 			embedded_svc.settings.entryFeature = 'LiveAgent';
 	
 			embedded_svc.init(
-				'https://hchanumolu-20210401-demo.my.salesforce.com',
-				'https://sdodemo-main-166ce2cf6b6-172-1788d46f85c.force.com',
+				'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com',
+				'https://testchatpersistence-developer-edition.ap24.force.com/site1',
 				gslbBaseURL,
-				'00D5g000004hplA',
-				'fallBackRouting',
+				'00D5g00000Bk6SK',
+				'uploadImageInEinsteinBot',
 				{
 					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
-					deploymentId: '5725g000000wvPz',
-					buttonId: '5735g000000xDdE',
+					deploymentId: '5725g000000Tl4H',
+					buttonId: '5735g000000TpTn',
 					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000x1JYEAY_17cc5d4b503',
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFR3EAO_17c3681fdb7',
 					isOfflineSupportEnabled: false
 				}
 			);
@@ -127,7 +127,7 @@
 	
 		if (!window.embedded_svc) {
 			var s = document.createElement('script');
-			s.setAttribute('src', 'https://hchanumolu-20210401-demo.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+			s.setAttribute('src', 'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 			s.onload = function() {
 				initESW(null);
 			};
