--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
 			embedded_svc.settings.entryFeature = 'LiveAgent';
 	
 			embedded_svc.init(
-				'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com',
-				'https://testchatpersistence-developer-edition.ap24.force.com/site1',
+				'https://hchanumolu-20210401-demo.my.salesforce.com',
+				'https://sdodemo-main-166ce2cf6b6-172-1788d46f85c.force.com',
 				gslbBaseURL,
-				'00D5g00000Bk6SK',
-				'uploadImageInEinsteinBot',
+				'00D5g000004hplA',
+				'fallBackRouting',
 				{
 					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
-					deploymentId: '5725g000000Tl4H',
-					buttonId: '5735g000000TpTn',
+					deploymentId: '5725g000000wvPz',
+					buttonId: '5735g000000xDdE',
 					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFR3EAO_17c3681fdb7',
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000x1JYEAY_17cc5d4b503',
 					isOfflineSupportEnabled: false
 				}
 			);
@@ -127,7 +127,7 @@
 	
 		if (!window.embedded_svc) {
 			var s = document.createElement('script');
-			s.setAttribute('src', 'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+			s.setAttribute('src', 'https://hchanumolu-20210401-demo.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 			s.onload = function() {
 				initESW(null);
 			};
