--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 				'https://testchatpersistence-developer-edition.ap24.force.com/site1',
 				gslbBaseURL,
 				'00D5g00000Bk6SK',
-				'uploadImageInEinsteinBot',
+				'Chat_Case',
 				{
 					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
 					deploymentId: '5725g000000Tl4H',
-					buttonId: '5735g000000TpTn',
+					buttonId: '5735g000000Tq6F',
 					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFR3EAO_17c3681fdb7',
-					isOfflineSupportEnabled: true
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LFsYEAW_17c566f31d5',
+					isOfflineSupportEnabled: false
 				}
 			);
 		};
