--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 	<style type='text/css'>
 		.embeddedServiceHelpButton .helpButton .uiButton {
-			background-color: #B0BBC1;
+			background-color: #99A1A7;
 			font-family: "Arial", sans-serif;
 		}
 		.embeddedServiceHelpButton .helpButton .uiButton:focus {
-			outline: 1px solid #B0BBC1;
+			outline: 1px solid #99A1A7;
 		}
 	</style>
 	
@@ -46,14 +46,14 @@
 				'https://chat-koneonline.cs84.force.com/koneonline',
 				gslbBaseURL,
 				'00D5E000000DoPS',
-				'Service_Agent_Chat',
+				'Design_tools',
 				{
 					baseLiveAgentContentURL: 'https://c.la2-c1cs-cdg.salesforceliveagent.com/content',
 					deploymentId: '5725E00000000d9',
-					buttonId: '5735E0000008PtW',
+					buttonId: '5735E000000CcGM',
 					baseLiveAgentURL: 'https://d.la2-c1cs-cdg.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'Service_Agent_Chat',
-					isOfflineSupportEnabled: false
+					eswLiveAgentDevName: 'Design_tools',
+					isOfflineSupportEnabled: true
 				}
 			);
 		};
