--- a/index.html
+++ b/index.html
@@ -4,88 +4,73 @@
 <head>
 	<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
 
-		<style type='text/css'>
-			.embeddedServiceHelpButton .helpButton .uiButton {
-				background-color: #99A1A7;
-				font-family: "Arial", sans-serif;
-			}
-	
-			.embeddedServiceHelpButton .helpButton .uiButton:focus {
-				outline: 1px solid #99A1A7;
-			}
-		</style>
-
 
 </head>
 
 <body>
 
+	<style type='text/css'>
+		.embeddedServiceHelpButton .helpButton .uiButton {
+			background-color: #005290;
+			font-family: "Arial", sans-serif;
+		}
+		.embeddedServiceHelpButton .helpButton .uiButton:focus {
+			outline: 1px solid #005290;
+		}
+	</style>
+	
 	<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 	<script type='text/javascript'>
-		var initESW = function (gslbBaseURL) {
+		var initESW = function(gslbBaseURL) {
 			embedded_svc.settings.displayHelpButton = true; //Or false
 			embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-
-
-
+	
 			//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 			//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-
-
-
+	
 			//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
 			//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-
-
-
+	
 			// Settings for Chat
 			//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-			// Returns a valid button ID.
+				// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+				// Returns a valid button ID.
 			//};
 			//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 			//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 			//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-
-
-
+	
 			embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 			embedded_svc.settings.entryFeature = 'LiveAgent';
-
-
-
+	
 			embedded_svc.init(
-				'https://kone--chat.my.salesforce.com',
-				'https://chat-koneonline.cs84.force.com/koneonline',
+				'https://hchanumolu-20210401-demo.my.salesforce.com',
+				'https://sdodemo-main-166ce2cf6b6-172-1788d46f85c.force.com',
 				gslbBaseURL,
-				'00D5E000000DoPS',
-				'Design_tools',
+				'00D5g000004hplA',
+				'fallBackRouting',
 				{
-					baseLiveAgentContentURL: 'https://c.la2-c1cs-cdg.salesforceliveagent.com/content',
-					deploymentId: '5725E00000000d9',
-					buttonId: '5735E000000CcGM',
-					baseLiveAgentURL: 'https://d.la2-c1cs-cdg.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'Design_tools',
-					isOfflineSupportEnabled: true
+					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
+					deploymentId: '5725g000000wvPz',
+					buttonId: '5735g000000xDdE',
+					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
+					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000x1JYEAY_17cc5d4b503',
+					isOfflineSupportEnabled: false
 				}
 			);
 		};
-
-
-
+	
 		if (!window.embedded_svc) {
 			var s = document.createElement('script');
-			s.setAttribute('src', 'https://kone--chat.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-			s.onload = function () {
+			s.setAttribute('src', 'https://hchanumolu-20210401-demo.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+			s.onload = function() {
 				initESW(null);
 			};
 			document.body.appendChild(s);
 		} else {
 			initESW('https://service.force.com');
 		}
-
 	</script>
-
 </body>
 
 </html>
