--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 	<style type='text/css'>
 		.embeddedServiceHelpButton .helpButton .uiButton {
-			background-color: #005290;
+			background-color: #99A1A7;
 			font-family: "Arial", sans-serif;
 		}
 		.embeddedServiceHelpButton .helpButton .uiButton:focus {
-			outline: 1px solid #005290;
+			outline: 1px solid #99A1A7;
 		}
 	</style>
 	
@@ -44,25 +44,25 @@
 			embedded_svc.settings.entryFeature = 'LiveAgent';
 	
 			embedded_svc.init(
-				'https://hchanumolu-20210401-demo.my.salesforce.com',
-				'https://sdodemo-main-166ce2cf6b6-172-1788d46f85c.force.com',
+				'https://kone--chat.my.salesforce.com',
+				'https://chat-koneonline.cs84.force.com/koneonline',
 				gslbBaseURL,
-				'00D5g000004hplA',
-				'fallBackRouting',
+				'00D5E000000DoPS',
+				'Design_tools',
 				{
-					baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
-					deploymentId: '5725g000000wvPz',
-					buttonId: '5735g000000xDdE',
-					baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-					eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000x1JYEAY_17cc5d4b503',
-					isOfflineSupportEnabled: false
+					baseLiveAgentContentURL: 'https://c.la2-c1cs-cdg.salesforceliveagent.com/content',
+					deploymentId: '5725E00000000d9',
+					buttonId: '5735E000000CcGM',
+					baseLiveAgentURL: 'https://d.la2-c1cs-cdg.salesforceliveagent.com/chat',
+					eswLiveAgentDevName: 'Design_tools',
+					isOfflineSupportEnabled: true
 				}
 			);
 		};
 	
 		if (!window.embedded_svc) {
 			var s = document.createElement('script');
-			s.setAttribute('src', 'https://hchanumolu-20210401-demo.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+			s.setAttribute('src', 'https://kone--chat.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 			s.onload = function() {
 				initESW(null);
 			};
