--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
 
-	<div id="liveagent_invite_button_5735g000000wvuT" style="display:none;"><span
+	<div id="liveagent_invite_button_5735g000000xDkG" style="display:none;"><span
 			style="cursor: pointer; width: 100px; height: 20px; padding: 5px;"
-			onclick="liveagent.startChat('5735g000000wvuT')">Start Chat</span><span
+			onclick="liveagent.startChat('5735g000000xDkG')">Start Chat</span><span
 			style="cursor: pointer; width: 100px; height: 20px; padding: 5px;"
-			onclick="liveagent.rejectChat('5735g000000wvuT')">Reject Chat</span></div>
+			onclick="liveagent.rejectChat('5735g000000xDkG')">Reject Chat</span></div>
 </body>
 
 </html>
