--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 
 <body>
 
-	<div id="liveagent_invite_button_5735g000000xDkG" style="display:none;"><span
-			style="cursor: pointer; width: 100px; height: 20px; padding: 5px;"
-			onclick="liveagent.startChat('5735g000000xDkG')">Start Chat</span><span
-			style="cursor: pointer; width: 100px; height: 20px; padding: 5px;"
-			onclick="liveagent.rejectChat('5735g000000xDkG')">Reject Chat</span></div>
+<script type='text/javascript'
+    src='https://c.la2-c1-ukb.salesforceliveagent.com/content/g/js/53.0/deployment.js'></script>
+<script type='text/javascript'>
+    liveagent.init('https://d.la2-c1-ukb.salesforceliveagent.com/chat', '5725g000000Tl4H', '00D5g00000Bk6SK');
+</script>
+<div id="liveagent_invite_button_5735g000000TqKJ" style="display:none;"><span
+        style="cursor: pointer; width: 100px; height: 20px; padding: 5px;"
+        onclick="liveagent.startChat('5735g000000TqKJ')">Start Chat</span><span
+        style="cursor: pointer; width: 100px; height: 20px; padding: 5px;"
+        onclick="liveagent.rejectChat('5735g000000TqKJ')">Reject Chat</span></div>
+
 </body>
 
 </html>
