--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <script type='text/javascript'>
         liveagent.init('https://d.la2-c1-ukb.salesforceliveagent.com/chat', '5725g000000TnoU', '00D5g00000Bk6SK');
         </script>
-        
+        <script type='text/javascript' src='https://c.la2-c1-ukb.salesforceliveagent.com/content/g/js/53.0/deployment.js'></script>
+<script type='text/javascript'>
+liveagent.init('https://d.la2-c1-ukb.salesforceliveagent.com/chat', '5725g000000Tl4H', '00D5g00000Bk6SK');
+</script>
         <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
         <script type='text/javascript'>
             var initESW = function(gslbBaseURL) {
