--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <style type='text/css'>
         .embeddedServiceHelpButton .helpButton .uiButton {
-            background-color: #005290;
+            background-color: #570580;
             font-family: "Arial", sans-serif;
         }
         .embeddedServiceHelpButton .helpButton .uiButton:focus {
-            outline: 1px solid #005290;
+            outline: 1px solid #570580;
         }
     </style>
     <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
@@ -42,14 +42,14 @@
                 'https://uat-cmore.cs84.force.com',
                 gslbBaseURL,
                 '00D5E000000Deh1',
-                'chat_test',
+                'chatbot',
                 {
                     baseLiveAgentContentURL: 'https://c.la2-c1cs-cdg.salesforceliveagent.com/content',
-                    deploymentId: '572b0000000GxI9',
-                    buttonId: '573b0000000Gxx8',
+                    deploymentId: '5725E0000008PFW',
+                    buttonId: '5735E0000008QBa',
                     baseLiveAgentURL: 'https://d.la2-c1cs-cdg.salesforceliveagent.com/chat',
-                    eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5E0000008Oi6UAE_171b2d66db1',
-                    isOfflineSupportEnabled: false
+                    eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5E0000004CctUAE_1781c3ee5be',
+                    isOfflineSupportEnabled: true
                 }
             );
         };
