--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             }
             
             .embeddedServiceSidebar.modalContainer {
-                background-color:red;
+                z-index: 10000 !important;
             }
         </style>
 
