--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
     
             embedded_svc.init(
                 'https://d5g00000bk6skeaz-dev-ed.my.salesforce.com',
-                'https://testchatpersistence-developer-edition.ap24.force.com/site1',
+                'https://testchatpersistence-developer-edition.ap24.force.com',
                 gslbBaseURL,
                 '00D5g00000Bk6SK',
-                'ChatPersistenceEmbeddedDeployment',
+                'rich_text_article_answers',
                 {
                     baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
-                    deploymentId: '5725g000000TnoU',
-                    buttonId: '5735g000000Tnd1',
+                    deploymentId: '5725g000000Tl4H',
+                    buttonId: '5735g000000TqPo',
                     baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
-                    eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LF3nEAG_17ba7925560',
+                    eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000LGD6EAO_17d8b3f4225',
                     isOfflineSupportEnabled: false
                 }
             );
