--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             outline: 1px solid #E30613;
         }
 
-        .embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {
+        /*.embeddedServiceHelpButton .helpButton .uiButton.helpButtonDisabled {
             display: none;
-        }
+        }*/
     </style>
     <script type="text/javascript" src="https://which.my.salesforce.com/embeddedservice/5.0/esw.min.js"></script>
     <script type="text/javascript">
