--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 'https://newtesthimaja-developer-edition.ap27.force.com',
                 gslbBaseURL,
                 '00D5j0000045CYG',
-                'test_deployment',
+                'test_2',
                 {
                     baseLiveAgentContentURL: 'https://c.la2-c2-ukb.salesforceliveagent.com/content',
                     deploymentId: '5725j000000PEkO',
                     buttonId: '5735j000000TRIl',
                     baseLiveAgentURL: 'https://d.la2-c2-ukb.salesforceliveagent.com/chat',
-                    eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5j000000KzgBEAS_17e0bf6e509',
+                    eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5j0000010xdDEAQ_17ee85b884a',
                     isOfflineSupportEnabled: false
                 }
             );
