--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             'Training',
             {
                 baseLiveAgentContentURL: 'https://c.la2-c2-hnd.salesforceliveagent.com/content',
-                deploymentId: '5725i000000x7vk',
+                deploymentId: '5725i000000x7v6',
                 buttonId: '5735i000000x8bh',
                 baseLiveAgentURL: 'https://d.la2-c2-hnd.salesforceliveagent.com/chat',
                 eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5i000000sbq0EAA_181f1d17913',
