--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 
 <head>
     <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-    <meta name="referrer" content="no-referrer-when-downgrade" />
-</head>
+    <!--<meta name="referrer" content="no-referrer-when-downgrade" />-->
 
-<body>
     <script type='text/javascript'>
         function initEmbeddedMessaging() {
             try {
@@ -25,6 +23,10 @@
         };
     </script>
     <script type='text/javascript' src='https://sathkuri-221107-332-demo--demotest.sandbox.my.site.com/ESWGITESD1685006767364/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+</head>
+
+<body>
+    
          
 </body>
 
